first pages of project 1

--- a/p1/page1/index.html
+++ b/p1/page1/index.html
@@ -5,6 +5,7 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <h1>Joseph Had a Little Overcoat</h1>
+    <h2> By Simms Taback</h2>
   </body>
 </html>
