--- a/p1/page9/index.html
+++ b/p1/page9/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>So, he made a necktie out of it and went to visit his married sister in the city.</p>
   </body>
 </html>
