--- a/p1/page11/index.html
+++ b/p1/page11/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>So, he made a handkerchief out of it and drank a glass of hot tea with lemon.</p>
   </body>
 </html>
