--- a/p1/page12/index.html
+++ b/p1/page12/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE htmL>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>Joseph had a little handkerchief. It got old and worn.</p>
   </body>
 </html>
