--- a/p1/page15/index.html
+++ b/p1/page15/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>Now he had nothing.</p>
   </body>
 </html>
