--- a/p1/page16/index.html
+++ b/p1/page16/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>So, Joseph made a book about it. Which shows...you can always make something out of nothing.</p>
   </body>
 </html>
