--- a/p1/page13/index.html
+++ b/p1/page13/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>So, he made a button out of it and used it to fasten his suspenders.</p>
+    <p>Joseph had a little button. One day he lost it.</p>
   </body>
 </html>
