--- a/p1/page14/index.html
+++ b/p1/page14/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little button. One day he lost it.</p>
+    <p>Now he had nothing.</p>
   </body>
 </html>
