--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>So, he made a scarf out of it and sang in the men's chorus.</p>
+    <p>Joseph had a little scarf. It got old and worn.</p>
   </body>
 </html>
