--- a/p1/page12/index.html
+++ b/p1/page12/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE htmL>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little handkerchief. It got old and worn.</p>
+    <p>So, he made a button out of it and used it to fasten his suspenders.</p>
   </body>
 </html>
