--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>So, he made a jacket out of it and went to the fair.</p>
   </body>
 </html>
