--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -5,6 +5,6 @@
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little jacket. It got old and worn.</p>
+    <p>So, he made a vest out of it and danced at his nephew's wedding.</p>
   </body>
 </html>
