--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"
     <title>Project 1.2</title>
   </head>
   <body>
-    <p>Joseph had a little vest. It got old and worn.</p>
+    <p>So, he made a scarf out of it and sang in the men's chorus.</p>
   </body>
 </html>
