--- a/p1/index.html
+++ b/p1/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Project 1.2</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1>Joseph Had a Little Overcoat</h1>
     <h2> By Simms Taback</h2>
   </body>
 </html>
-
-
-<link rel="stylesheet" href="css/main.css"> under title
