--- a/index.html
+++ b/index.html
@@ -1,70 +1,18 @@
-<!DOCTYPE>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Exercise 1</title>
- </head>
- <body>
-  <h1>E1: 20 Questions for Sofia Ferrufino</h1>
-  <h2>Question 1</h2>
-  <p>Q: What is your favorite type of food?</p>
-  <p>A: Italian food</p>
-  <h2>Question 2</h2>
-  <p>Q: What is your zodiac sign?</p>
-  <p>A: Scorpio</p>
-  <h2>Question 3</h2>
-  <p>Q: If you could live anywhere, where would it be?</p>
-  <p>A: France or Spain.</p>
-  <h2>Question 4</h2>
-  <p>Q: What kind of car do you drive, and does it have a name?</p>
-  <p>A: I drive a silver 2000 Chrysler Town and Country and no it doesn’t have a name.</p>
-  <h2>Question 5</h2>
-  <p>Q: Who is your role model?</p>
-  <p>A: My parents.</p>
-  <h2>Question 6</h2>
-  <p>Q: Have you ever worked with paint?</p>
-  <p>A: Yes! I’ve worked with watercolor, acrylic, and oil.</p>
-  <h2>Question 7</h2>
-  <p>Q: What is the last show that you sat down and binged watched?</p>
-  <p>A: Noragami</p>
-  <h2>Question 8</h2>
-  <p>Q: How many languages do you speak?</p>
-  <p>A: I speak two languages: English and Spanish.</p>
-  <h2>Question 9</h2>
-  <p>Q: When is a normal time for you to go to sleep?</p>
-  <p>A: Midnight.</p>
-  <h2>Question 10</h2>
-  <p>Q: What is your favorite bird?</p>
-  <p>A: Either Cardinals or American Goldfinches.</p>
-  <h2>Question 11</h2>
-  <p>Q: What is your dream vacation and why?</p>
-  <p>A: I would love to travel all over Europe because it’s filled with so much art, history, culture, not to mention amazing food!</p>
-  <h2>Question 12</h2>
-  <p>Q: Where is one place you would travel to if you had all the money in the world?</p>
-  <p>A: Rome.</p>
-  <h2>Question 13</h2>
-  <p>Q:What kind of pet do you have, if any?</p>
-  <p>A: I have 2 dogs: Bosco, a Flat-coated Retriever, and Oliver, a Coton de Tulear.</p>
-  <h2>Question 14</h2>
-  <p>Q: If you could recommend a single book to someone, what would it be?</p>
-  <p>A: The Bible.</p>
-  <h2>Question 15</h2>
-  <p>Q: What is your favorite movie?</p>
-  <p>A: Howl’s Moving Castle.</p>
-  <h2>Question 16</h2>
-  <p>Q: What's an odd obsession you have?</p>
-  <p>A: Being organized by having a daily checklist and completing it.</p>
-  <h2>Question 17</h2>
-  <p>Q: What is your favorite cartoon?</p>
-  <p>A: Avatar: The Last Airbender.</p>
-  <h2>Question 18</h2>
-  <p>Q: In one word, what superpower would you most like to have?</p>
-  <p>A: Teleportation.</p>
-  <h2>Question 19</h2>
-  <p>Q: What was your go to snack when you were a kid?</p>
-  <p>A: Teddy Grahams.</p>
-  <h2>Question 20</h2>
-  <p>Q: What was the best Halloween costume you’ve ever worn (if you usually celebrate it)?</p>
-  <p>A: A Witch.</p>
- </body>
-</html>
+<!DOCTYPE html>
+ <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Sofia Ferrufino</title>
+  </head>
+  <body>
+    <h1>Sofia Ferrufino's Work</h1>
+    <ul>
+      <li><a href="e1/index.html">E1: 20 Questions</a></li>
+      <li><a href="e2/index.html">E2: Make the Grid</a></li>
+      <li>E3: Organize Me</li>
+      <li>E4: Site Map</li>
+      <li>E5: Wireframes</li>
+      <li>P1: Linking Narrative</li>
+    </ul>
+  </body>
+ </html>
