p1.3 links and css

--- a/p1/index.html
+++ b/p1/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Joseph Had a Little Overcoat</h1>
+    <h1>Joseph Had a Little <a href="page1/index.html">Overcoat</a></h1>
     <h2> By Simms Taback</h2>
   </body>
 </html>
