--- a/p1/page12/index.html
+++ b/p1/page12/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a button out of it and used it to fasten his suspenders.</p>
+    <p>So, he made a button out of it and <a href="page13/index.html">used it to fasten his suspenders</a>.</p>
   </body>
 </html>
