--- a/p1/page13/index.html
+++ b/p1/page13/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little button. One day he lost it.</p>
+    <p>Joseph had a little <a href="page14/index.html">button</a>. One day he lost it.</p>
   </body>
 </html>
