--- a/p1/page15/index.html
+++ b/p1/page15/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, Joseph made a book about it. Which shows...you can always make something out of nothing.</p>
+    <p>So, Joseph made a book about it. Which shows...you can always make <a href="../index.html">something out of nothing</a>.</p>
   </body>
 </html>
