--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a jacket out of it and went to the fair.</p>
+    <p>So, he made a jacket out of it and <a href="page3/index.html">went to the fair</a>.</p>
   </body>
 </html>
