--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little scarf. It got old and worn.</p>
+    <p>Joseph had a little <a href="page8/index.html">scarf</a>. It got old and worn.</p>
   </body>
 </html>
