--- a/p1/page1/index.html
+++ b/p1/page1/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little overcoat. It was old and worn.</p>
+    <p>Joseph had a little <a href="page2/index.html">overcoat</a>. It was old and worn.</p>
   </body>
 </html>
