--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a handkerchief out of it and drank a glass of hot tea with lemon.</p>
+    <p>So, he made a handkerchief out of it and <a href="page11/index.html">drank a glass of hot tea with lemon</a>.</p>
   </body>
 </html>
