--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a vest out of it and danced at his nephew's wedding.</p>
+    <p>So, he made a vest out of it and <a href="page5/index.html">danced at his nephew's wedding</a>.</p>
   </body>
 </html>
