--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a scarf out of it and sang in the men's chorus.</p>
+    <p>So, he made a scarf out of it and <a href="page7/index.html">sang in the men's chorus</a>.</p>
   </body>
 </html>
