--- a/p1/page8/index.html
+++ b/p1/page8/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project 1.2</title>
+    <title>Project 1</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a necktie out of it and went to visit his married sister in the city.</p>
+    <p>So, he made a necktie out of it and went to <a href="page9/index.html">visit his married sister in the city</a>.</p>
   </body>
 </html>
