--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a jacket out of it and <a href="page3/index.html">went to the fair</a>.</p>
+    <p>So, he made a jacket out of it and <a href="../page3/index.html">went to the fair</a>.</p>
   </body>
 </html>
