--- a/p1/page1/index.html
+++ b/p1/page1/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little <a href="page2/index.html">overcoat</a>. It was old and worn.</p>
+    <p>Joseph had a little <a href="../page2/index.html">overcoat</a>. It was old and worn.</p>
   </body>
 </html>
