--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a handkerchief out of it and <a href="page11/index.html">drank a glass of hot tea with lemon</a>.</p>
+    <p>So, he made a handkerchief out of it and <a href="../page11/index.html">drank a glass of hot tea with lemon</a>.</p>
   </body>
 </html>
