--- a/p1/page13/index.html
+++ b/p1/page13/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little <a href="page14/index.html">button</a>. One day he lost it.</p>
+    <p>Joseph had a little <a href="../page14/index.html">button</a>. One day he lost it.</p>
   </body>
 </html>
