--- a/p1/page14/index.html
+++ b/p1/page14/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Now he had <a href="page15/index.html">nothing</a>.</p>
+    <p>Now he had <a href="../page15/index.html">nothing</a>.</p>
   </body>
 </html>
