--- a/p1/page4/index.html
+++ b/p1/page4/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a vest out of it and <a href="page5/index.html">danced at his nephew's wedding</a>.</p>
+    <p>So, he made a vest out of it and <a href="../page5/index.html">danced at his nephew's wedding</a>.</p>
   </body>
 </html>
