--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little <a href="page6/index.html">vest</a>. It got old and worn.</p>
+    <p>Joseph had a little <a href="../page6/index.html">vest</a>. It got old and worn.</p>
   </body>
 </html>
