--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a scarf out of it and <a href="page7/index.html">sang in the men's chorus</a>.</p>
+    <p>So, he made a scarf out of it and <a href="../page7/index.html">sang in the men's chorus</a>.</p>
   </body>
 </html>
