--- a/p1/page8/index.html
+++ b/p1/page8/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a necktie out of it and went to <a href="page9/index.html">visit his married sister in the city</a>.</p>
+    <p>So, he made a necktie out of it and went to <a href="../page9/index.html">visit his married sister in the city</a>.</p>
   </body>
 </html>
