--- a/p1/page12/index.html
+++ b/p1/page12/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, he made a button out of it and <a href="page13/index.html">used it to fasten his suspenders</a>.</p>
+    <p>So, he made a button out of it and <a href="../page13/index.html">used it to fasten his suspenders</a>.</p>
   </body>
 </html>
