--- a/p1/page3/index.html
+++ b/p1/page3/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>Joseph had a little <a href="page4/index.html">jacket</a>. It got old and worn.</p>
+    <p>Joseph had a little <a href="../page4/index.html">jacket</a>. It got old and worn.</p>
   </body>
 </html>
