--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"
+    <meta charset="utf-8">
     <title>Project 1</title>
     <link rel="stylesheet" href="../css/main.css">
   </head>
