--- a/p1/page12/index.html
+++ b/p1/page12/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Project 1</title>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
