--- a/e6/index.html
+++ b/e6/index.html
@@ -5,11 +5,11 @@
    <title>Exercise 6</title>
  </head>
  <body>
-   <img src="images/layout1.png" alt="black & white Anna Karenina movie scene ">
-   <img src="images/layout2.png" alt="gray Moscow and black box">
-   <img src="images/layout3.png" alt="black & white Moscow scenery">
+   <img src="images/layout1.png" alt="black & white Anna Karenina ">
+   <img src="images/layout2.png" alt="black box">
+   <img src="images/layout3.png" alt="black & white">
    <img src="images/layout4.png" alt="beige and purple layout with painting">
    <img src="images/layout5.png" alt="black and red diamonds with ballerina">
-   <img src="images/layout6.png" alt="red russian doll layout">
+   <img src="images/layout6.png" alt="Anna Karenina movie scene w/ Moscow scene layout">
  </body>
 </html>
