--- a/p1/page15/index.html
+++ b/p1/page15/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <p>So, Joseph made a book about it. Which shows...you can always make <a href="../index.html">something out of nothing</a>.</p>
+    <p>So, Joseph made a book about it. Which shows...you can always make <a href="../page1/index.html">something out of nothing</a>.</p>
   </body>
 </html>
