website design changes

--- a/e2/index.html
+++ b/e2/index.html
@@ -3,8 +3,9 @@
   <head>
      <meta charset="utf-8">
      <title>Exercise 2</title>
+     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="exercise">
     <img src="images/grid1.png" alt="red circles on a grid">
     <img src="images/grid2.png" alt="blue and green squares on a grid">
     <img src="images/grid3.png" alt="primary color shapes on a grid">
