more design changes

--- a/e4/index.html
+++ b/e4/index.html
@@ -3,8 +3,9 @@
  <head>
    <meta charset="utf-8">
    <title>Exercise 4</title>
+   <link rel="stylesheet" href="../css/main.css">
  </head>
- <body>
+ <body class="exercise">
    <img src="images/e4sitemap.png" alt="sitemap for ShareTea">
  </body>
 </html>
