--- a/e5/index.html
+++ b/e5/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Exercise 5</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="exercise">
     <img src="images/desktop.png" alt="desktop wireframe of ShareTea">
     <img src="images/mobile.png" alt="mobile wireframe of ShareTea">
   </body>
