--- a/e1/index.html
+++ b/e1/index.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>Exercise 1</title>
+  <link rel="stylesheet" href="../css/main.css">
  </head>
  <body>
   <h1>E1: 20 Questions for Sofia Ferrufino</h1>
