--- a/e3/index.html
+++ b/e3/index.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="utf-8">
    <title>Exercise 3</title>
+   <link rel="stylesheet" href="../css/main.css">
  </head>
  <body>
    <img src="e3screenshot.png" alt="screenshot of OrganizeMe exercise">
