--- a/e6/index.html
+++ b/e6/index.html
@@ -3,8 +3,9 @@
  <head>
    <meta charset="utf-8">
    <title>Exercise 6</title>
+   <link rel="stylesheet" href="../css/main.css">
  </head>
- <body>
+ <body class="exercise">
    <img src="images/layout1.png" alt="black & white Anna Karenina ">
    <img src="images/layout2.png" alt="black box">
    <img src="images/layout3.png" alt="black & white">
