--- a/e6/index.html
+++ b/e6/index.html
@@ -8,9 +8,9 @@
  <body class="exercise">
    <img src="images/layout1.png" alt="black & white Anna Karenina ">
    <img src="images/layout2.png" alt="black box">
-   <img src="images/layout3.png" alt="black & white">
+   <img src="images/layout3.png" alt="black & white flush left">
    <img src="images/layout4.png" alt="beige and purple layout with painting">
    <img src="images/layout5.png" alt="black and red diamonds with ballerina">
-   <img src="images/layout6.png" alt="Anna Karenina movie scene w/ Moscow scene layout">
+   <img src="images/layout6.png" alt="Anna Karenina movie scene layout">
  </body>
 </html>
