--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="e4/index.html">E4: Site Map</a></li>
       <li><a href="e5/index.html">E5: Wireframes</a></li>
       <li><a href="e6/index.html">E6: Type on Screen</a></li>
+      <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
       <li><a href="p1/index.html">P1: Linking Narrative</a></li>
     </ul>
   </body>
