--- a/e7/index.html
+++ b/e7/index.html
@@ -5,6 +5,7 @@
    <title>E7: Seven-Principles.txt</title>
    <link rel="stylesheet" href="css/main.css">
    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
  </head>
  <body>
    <h1>Seven Principles of Typographic Contrast</h1>
@@ -29,7 +30,7 @@
 
 <p>Dair first explains the "elements of harmony" (a consistent relationship between the black strokes of the letters on a page and the space around them; and any rules, frames, or decorations being similar in style to the type), then goes on to show seven different kinds of contrast. He emphasizes that in any kind of differentiation, it's important to make the contrast obvious -- not just a slight change, an almost imperceptible variation, but a really big, obvious difference between the contrasting elements.</p>
 
- <ul>
+ <ul id="contrast">
   <li>Contrast of Size</li>
   <li>Contrast of Weight</li>
   <li>Contrast of Form</li>
