--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="e5/index.html">E5: Wireframes</a></li>
       <li><a href="e6/index.html">E6: Type on Screen</a></li>
       <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
+      <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
       <li><a href="p1/index.html">P1: Linking Narrative</a></li>
     </ul>
   </body>
