--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width+device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sofia Ferrufino</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -18,7 +18,7 @@
       <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
       <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
       <li><a href="p1/index.html">P1: Linking Narrative</a></li>
-      <li><a href="p2/index.html">P2: Website for a [Blank]</a><li>
+      <li><a href="p2/index.html">P2: Website for a Restaurant</a></li>
     </ul>
   </body>
  </html>
