--- a/p2/index.html
+++ b/p2/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <meta charset="utf-8">
-   <title>Bosco's Biscotti</title>
+   <title>Home</title>
    <link rel="stylesheet" href="css/main.css">
    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
  </head>
@@ -11,7 +11,18 @@
      <li><a href="about/index.html">About</a></li>
      <li><a href="events/index.html">Events</a></li>
      <li><a href="menu/index.html">Menu</a></li>
-     <li><a href="home/index.html">Home</a></li>
+     <li><a href="index.html">Home</a></li>
    </ul>
+   <h1>Pines of Nowhere</h1>
+   <h2>Benvenuti a tutti!</h2>
+   <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
+   <h2>Explore our Menu</h2>
+   <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
+   <h2>Schedule your Seat for our Cooking Classes</h2>
+   <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
+   <h2>Who We Are</h2>
+   <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
+   <h2>Visit our Bakery!</h2>
+   <p>We offer various types of fresh baked bread and exquisite pastries, cakes, cookies, and more!</p>
  </body>
- </html>
+</html>
