--- a/p2/about/index.html
+++ b/p2/about/index.html
@@ -11,7 +11,7 @@
      <li><a href="index.html">About</a></li>
      <li><a href="../events/index.html">Events</a></li>
      <li><a href="../menu/index.html">Menu</a></li>
-     <li><a href="../home/index.html">Home</a></li>
+     <li><a href="../index.html">Home</a></li>
    </ul>
    <h1>About Us</h1>
    <h2>Meet the Founders</h2>
