--- a/p2/events/index.html
+++ b/p2/events/index.html
@@ -11,7 +11,7 @@
      <li><a href="../about/index.html">About</a></li>
      <li><a href="index.html">Events</a></li>
      <li><a href="../menu/index.html">Menu</a></li>
-     <li><a href="../home/index.html">Home</a></li>
+     <li><a href="../index.html">Home</a></li>
    </ul>
  </body>
 </html>
