--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -11,10 +11,10 @@
      <li><a href="../about/index.html">About</a></li>
      <li><a href="../events/index.html">Events</a></li>
      <li><a href="index.html">Menu</a></li>
-     <li><a href="../home/index.html">Home</a></li>
+     <li><a href="../index.html">Home</a></li>
    </ul>
    <p>
-     
+
    </p>
  </body>
 </html>
