--- a/e9/index.html
+++ b/e9/index.html
@@ -4,15 +4,16 @@
    <meta charset="utf-8">
    <title>Exercise 9</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="../css/main.css">
  </head>
   <body>
-    <main>
-      <div class="shape1"></div>
-      <div class="shape2"></div>
-      <div class="shape3"></div>
-      <div></div>
-      <div></div>
-    </main>
+    <h1>Exercise 9</h1>
+    <ul>
+      <li><a href="one/index.html">Pattern 1</a></li>
+      <li><a href="two/index.html">Pattern 2</a></li>
+      <li><a href="three/index.html">Pattern 3</a></li>
+      <li><a href="four/index.html">Pattern 4</a></li>
+      <li><a href="five/index.html">Pattern 5</a></li>
+    </ul>  
   </body>
 </html>
