--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="e6/index.html">E6: Type on Screen</a></li>
       <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
       <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
+      <li><a href="e9/index.html">E9: Patterns</a></li>
       <li><a href="p1/index.html">P1: Linking Narrative</a></li>
       <li><a href="p2/index.html">P2: Website for a Restaurant</a></li>
     </ul>
