--- a/p2/events/index.html
+++ b/p2/events/index.html
@@ -13,5 +13,23 @@
      <li><a href="../menu/index.html">Menu</a></li>
      <li><a href="../index.html">Home</a></li>
    </ul>
+   <h1>Make Yourself At Home</h1>
+   <img src="../images/people2.jpg" alt="crowded cafe with people">
+     <p>Location: 1234 5th St NW, Washington D.C.
+      Hours: Monday through Thursday 8am to 11pm; Friday and Saturday, 9am to midnight.
+      Contact Information:
+      Phone number: 251-324-2888
+      Email: pinesofnowhere@gmail.com</p>
+  <img src="../images/person.jpg" alt="crowded cafe with people">
+  <h2>Events</h2>
+  <h3>Cooking Class</h3>
+    <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
+  <h3>Arts and Crafts Night</h3>
+    <p>Every Saturday evening, from 6pm-8pm, we explore and auction artworks from local artists. We also make arts and crafts.</p>
+  <h3>Tasting Events</h3>
+    <p>Every Sunday night, from 9pm-10pm, we host wine, cheese, and other tasting events. We’ll show you exotic and expensive cheeses and wines from Italy and other parts of Europe, and other foods you can eat them with.</p>
+  <h3>Catering</h3>
+    <p>We now offer catering! Please email us for more information!</p>
+  <h3>To schedule an event please send us an email in advance!</h3>
  </body>
 </html>
