--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -13,8 +13,42 @@
      <li><a href="index.html">Menu</a></li>
      <li><a href="../index.html">Home</a></li>
    </ul>
-   <p>
-
-   </p>
+   <h1>Menu</h1>
+   <h2>Breads</h2>
+    <ul>
+      <li>Focaccia - $8</li>
+      <li>Rustic Italian Bread - $7</li>
+      <li>Sourdough Bread - $7</li>
+      <li>French Baguette - $4</li>
+      <li>Croissant - $1.50</li>
+      <li>Bagel - $2</li>
+    </ul>
+    <h2>Pastries</h2>
+     <ul>
+       <li>Sicilian Cannoli - $5</li>
+       <li>Panettone - $6</li>
+       <li>Zeppole - $4</li>
+       <li>Sfogliatella - $4</li>
+       <li>Bombolone - $4</li>
+       <li>Pies (apple, cherry, blueberry, pumpkin, pecan) (Slice - $3 Whole - $15)</li>
+     </ul>
+     <h2>Breads</h2>
+      <ul>
+        <li>Focaccia - $8</li>
+        <li>Rustic Italian Bread - $7</li>
+        <li>Sourdough Bread - $7</li>
+        <li>French Baguette - $4</li>
+        <li>Croissant - $1.50</li>
+        <li>Bagel - $2</li>
+      </ul>
+      <h2>Breads</h2>
+       <ul>
+         <li>Focaccia - $8</li>
+         <li>Rustic Italian Bread - $7</li>
+         <li>Sourdough Bread - $7</li>
+         <li>French Baguette - $4</li>
+         <li>Croissant - $1.50</li>
+         <li>Bagel - $2</li>
+       </ul>
  </body>
 </html>
