--- a/p2/events/index.html
+++ b/p2/events/index.html
@@ -31,5 +31,6 @@
   <h3>Catering</h3>
     <p>We now offer catering! Please email us for more information!</p>
   <h3>To schedule an event please send us an email in advance!</h3>
+  <p>Copyright @ 2020 Pines of Nowhere</p>  
  </body>
 </html>
