--- a/p2/index.html
+++ b/p2/index.html
@@ -26,5 +26,6 @@
    <img src="images/pizza1.jpg" alt="man cutting pizza">
    <h2>Who We Are</h2>
    <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p> <p>About Us</p>
+   <p>Copyright @ 2020 Pines of Nowhere</p>  
  </body>
 </html>
