--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -14,6 +14,7 @@
      <li><a href="../index.html">Home</a></li>
    </ul>
    <h1>Menu</h1>
+   <img src="../images/bread1.jpg" alt="lots of bread">
    <h2>Breads</h2>
     <ul>
       <li>Focaccia - $8</li>
@@ -23,6 +24,7 @@
       <li>Croissant - $1.50</li>
       <li>Bagel - $2</li>
     </ul>
+    <img src="../images/sweets3.jpg" alt="window display with green cakes">
     <h2>Pastries</h2>
      <ul>
        <li>Sicilian Cannoli - $5</li>
@@ -32,23 +34,65 @@
        <li>Bombolone - $4</li>
        <li>Pies (apple, cherry, blueberry, pumpkin, pecan) (Slice - $3 Whole - $15)</li>
      </ul>
-     <h2>Breads</h2>
+     <img src="../images/cake.jpg" alt="display of cakes">
+     <h2>Cakes</h2>
+      <p>Slice - $3 Whole - $15</p>
       <ul>
-        <li>Focaccia - $8</li>
-        <li>Rustic Italian Bread - $7</li>
-        <li>Sourdough Bread - $7</li>
-        <li>French Baguette - $4</li>
-        <li>Croissant - $1.50</li>
-        <li>Bagel - $2</li>
+        <li>Tiramisu</li>
+        <li>Zuccotto</li>
+        <li>Cassata</li>
+        <li>Torta Paradiso</li>
       </ul>
-      <h2>Breads</h2>
+     <img src="../images/cookie.jpg" alt="colorful macaroons">
+      <h2>Cookies</h2>
+      <p>$0.50 each or $5 for a dozen</p>
        <ul>
-         <li>Focaccia - $8</li>
-         <li>Rustic Italian Bread - $7</li>
-         <li>Sourdough Bread - $7</li>
-         <li>French Baguette - $4</li>
-         <li>Croissant - $1.50</li>
-         <li>Bagel - $2</li>
+         <li>Biscotti (almond, pistachio, hazelnut & chocolate, orange-cranberry, double chocolate)</li>
+         <li>Mom’s Homemade Chocolate Chip Cookies</li>
+         <li>Sugar Cookies</li>
+         <li>Macaroons (vanilla, strawberry, chocolate, pistachio, coffee)</li>
        </ul>
+       <img src="../images/drink1.jpg" alt="coffee, juice, and baked goods">
+       <h2>Drinks</h2>
+       <p>(s: $2, m: $2.50, l: $3) (hot or cold)</p>
+        <ul>
+          <li>Coffee (espresso, cappuccino, ristretto, caffe americano, macchiato, mocha, latte)</li>
+          <li>Juices: orange, apple, grape</li>
+          <li>Water</li>
+          <li>Tea: (black, green, raspberry, chamomile, oolong, mint, jasmine)</li>
+        </ul>
+        <img src="../images/pizza2.jpg" alt="pizza with lettuce">
+        <h2>Meals</h2>
+         <ul>
+           <li>Hearty Breakfast (eggs, bacon, beans, cheese, blood sausage, toast)-$10</li>
+           <li>Brushcetta-$10</li>
+           <li>Lasagna-$10</li>
+           <li>Stuffed shells-$10</li>
+           <li>Pasta (tomato sauce or pesto sauce)-$10</li>
+            <ul>
+              <li>Spagetti</li>
+              <li>Carbonara</li>
+              <li>Ravioli (4 cheeses, spinach, mushroom, beef)</li>
+              <li>Tortellini</li>
+            </ul>
+           <li>Risotto -$10</li>
+           <li>Salad (Caprese, Chicken Caesar, Greek tomato/cucumber salad)-$10</li>
+           <li>Italian pizza: $6 (Choose cheeses, toppings, sauces from our menu)</li>
+          </ul>
+         <img src="../images/cheese3.jpg" alt="lots of cheeses in a wall display">
+         <h2>Cheeses, Meats & Other Toppings</h2>
+          <ul>
+            <li>Cheeses: Mozzarella, parmesan, ricotta, provolone, havarti, muenster, brie, camembert, gorgonzola, fontina (slice-$.50, whole-$6)</li>
+            <li>Meats: Honey ham, peppered turkey, rotisserie chicken, angus roast beef, pastrami, Italian sausages (sweet or spicy), Italian meatballs, prosciutto (slice-$0.50, whole-$10)</li>
+            <li>Toppings: onions, alfalfa sprouts, spinach, basil, romaine lettuce, olives, oregano, thyme, rosemary, antipasto, peppers, pickles ($0.50)</li>
+            <li>Sauces, Dressings, & Condiments: Tomato & basil sauce, mayonnaise, mustard, olive oil, pesto, balsamic vinegar.</li>
+          </ul>
+        <img src="../images/sandwich1.jpg" alt="panini with blue cups">
+        <h2>Sandwiches</h2>
+          <ul>
+            <li>Choose a type of bread, meats, cheese, and toppings from our menu.</li>
+            <li>Panini</li>
+          </ul>
+        <p>Copyright @ 2020 Pines of Nowhere</p>
  </body>
 </html>
