--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Sofia Ferrufino's Work</h1>
-    <ul>
-      <li><a href="e1/index.html">E1: 20 Questions</a></li>
-      <li><a href="e2/index.html">E2: Make the Grid</a></li>
-      <li><a href="e3/index.html">E3: Organize Me</a></li>
-      <li><a href="e4/index.html">E4: Site Map</a></li>
-      <li><a href="e5/index.html">E5: Wireframes</a></li>
-      <li><a href="e6/index.html">E6: Type on Screen</a></li>
-      <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
-      <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
-      <li><a href="e9/index.html">E9: Patterns</a></li>
-      <li><a href="p1/index.html">P1: Linking Narrative</a></li>
-      <li><a href="p2/index.html">P2: Website for a Restaurant</a></li>
-    </ul>
+    <header>
+      <h1>Sofia Ferrufino's Work</h1>
+    </header>
+    <main>
+      <div class="col">
+      <h2>Exercises</h2>
+      <ul>
+        <li><a href="e1/index.html">E1: 20 Questions</a></li>
+        <li><a href="e2/index.html">E2: Make the Grid</a></li>
+        <li><a href="e3/index.html">E3: Organize Me</a></li>
+        <li><a href="e4/index.html">E4: Site Map</a></li>
+        <li><a href="e5/index.html">E5: Wireframes</a></li>
+        <li><a href="e6/index.html">E6: Type on Screen</a></li>
+        <li><a href="e7/index.html">E7: Seven-Principles.txt</a></li>
+        <li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
+        <li><a href="e9/index.html">E9: Patterns</a></li>
+      </ul>
+    </div>
+    <div class="col">
+    <h2>Projects</h2>
+      <ul>
+        <li><a href="p1/index.html">P1: Linking Narrative</a></li>
+        <li><a href="p2/index.html">P2: Website for a Restaurant</a></li>
+      </ul>
+    </div>
+    </main>
   </body>
  </html>
