--- a/e9/index.html
+++ b/e9/index.html
@@ -4,7 +4,8 @@
    <meta charset="utf-8">
    <title>Exercise 9</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="css/main.css">
+   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
  </head>
   <body>
     <h1>Exercise 9</h1>
@@ -14,6 +15,6 @@
       <li><a href="three/index.html">Pattern 3</a></li>
       <li><a href="four/index.html">Pattern 4</a></li>
       <li><a href="five/index.html">Pattern 5</a></li>
-    </ul>  
+    </ul>
   </body>
 </html>
