--- a/e10/checkerboard/index.html
+++ b/e10/checkerboard/index.html
@@ -7,7 +7,52 @@
   <link rel="stylesheet" href="../css/main.css">
  </head>
  <body>
-   <div class="red"></div>
-   <div class="black"></div>
+   <div class="board">
+   <!-- row 1 -->
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+<!-- row 2 -->
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div class="red"></div>
+    <!-- row 3 -->
+     <div class="red"></div>
+     <div class="black"></div>
+     <div class="red"></div>
+     <div class="black"></div>
+     <div class="red"></div>
+     <div class="black"></div>
+     <div class="red"></div>
+     <div class="black"></div>
+     <!-- row 4 -->
+      <div class="black"></div>
+      <div class="red"></div>
+      <div class="black"></div>
+      <div class="red"></div>
+      <div class="black"></div>
+      <div class="red"></div>
+      <div class="black"></div>
+      <div class="red"></div>
+      <!-- row 5 -->
+       <div class="red"></div>
+       <div class="black"></div>
+       <div class="red"></div>
+       <div class="black"></div>
+       <div class="red"></div>
+       <div class="black"></div>
+       <div class="red"></div>
+       <div class="black"></div>
+  </div>
  </body>
 </html>
