--- a/e10/checkerboard/index.html
+++ b/e10/checkerboard/index.html
@@ -53,6 +53,33 @@
        <div class="black"></div>
        <div class="red"></div>
        <div class="black"></div>
+       <!-- row 6 -->
+        <div class="black"></div>
+        <div class="red"></div>
+        <div class="black"></div>
+        <div class="red"></div>
+        <div class="black"></div>
+        <div class="red"></div>
+        <div class="black"></div>
+        <div class="red"></div>
+        <!-- row 7 -->
+         <div class="red"></div>
+         <div class="black"></div>
+         <div class="red"></div>
+         <div class="black"></div>
+         <div class="red"></div>
+         <div class="black"></div>
+         <div class="red"></div>
+         <div class="black"></div>
+         <!-- row 8 -->
+          <div class="black"></div>
+          <div class="red"></div>
+          <div class="black"></div>
+          <div class="red"></div>
+          <div class="black"></div>
+          <div class="red"></div>
+          <div class="black"></div>
+          <div class="red"></div>
   </div>
  </body>
 </html>
