--- a/e10/checkerboard/index.html
+++ b/e10/checkerboard/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Exercise 10</title>
+  <title>Checkerboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/main.css">
  </head>
