--- a/p2/about/index.html
+++ b/p2/about/index.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="utf-8">
    <title>About</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/main.css">
    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
  </head>
@@ -20,6 +21,6 @@
    <img src="../images/bread3.jpg" alt="bruschetta">
    <h1>Passion for Authentic Italian Food</h1>
       <p>At Pines of Nowhere, we make sure to give our customers the most delicious, traditional Italian meals and goods that you would find in Italy or your Italian grandmother’s kitchen.  We always strive for excellence and offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
-      <p>Copyright @ 2020 Pines of Nowhere</p>  
+      <p>Copyright @ 2020 Pines of Nowhere</p>
  </body>
 </html>
