--- a/p2/index.html
+++ b/p2/index.html
@@ -5,30 +5,44 @@
    <title>Home</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="css/main.css">
-   <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
  </head>
  <body>
-   <ul>
-     <li><a href="about/index.html">About</a></li>
-     <li><a href="events/index.html">Events</a></li>
-     <li><a href="menu/index.html">Menu</a></li>
-   </ul>
-   <h1><a href="index.html">Pines of Nowhere</a></h1>
-   <img src="images/pasta1.2.jpg" alt="carbonara with white background">
-   <h2>Benvenuti a tutti!</h2>
-   <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
-   <img src="images/pasta2.2.jpg" alt="pasta on fork black background">
-   <h2>Explore our Menu</h2>
-   <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
-   <p><a href="menu/index.html">Menu</a></p>
-   <img src="images/people1.2.jpg" alt="man and woman cooking together">
-   <h2>Schedule your Seat for our Cooking Classes</h2>
-   <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
-   <p><a href="events/index.html">Events</a></p>
-   <img src="images/pizza1.2.jpg" alt="man cutting pizza">
-   <h2>Who We Are</h2>
-   <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
-   <p><a href="about/index.html">About Us</a></p>
-   <p>Copyright @ 2020 Pines of Nowhere</p>
+   <header>
+    <div class="border">
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="red"></div>
+    </div>  
+    <h1><a href="index.html">Pines of Nowhere</a></h1>
+    <nav>
+      <ul>
+        <li><a href="about/index.html">About</a></li>
+        <li><a href="events/index.html">Events</a></li>
+        <li><a href="menu/index.html">Menu</a></li>
+      </ul>
+    </nav>
+   </header>
+   <main>
+    <img src="images/pasta1.2.jpg" alt="carbonara with white background">
+    <h2>Benvenuti a tutti!</h2>
+    <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
+    <img src="images/meal3.2.jpg" alt="coffee and pastries">
+    <h2>Explore our Menu</h2>
+    <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
+    <p><a href="menu/index.html">Menu</a></p>
+    <img src="images/people1.2.jpg" alt="man and woman cooking together">
+    <h2>Schedule your Seat for our Cooking Classes</h2>
+    <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
+    <p><a href="events/index.html">Events</a></p>
+    <img src="images/pizza1.2.jpg" alt="man cutting pizza">
+    <h2>Who We Are</h2>
+    <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
+    <p><a href="about/index.html">About Us</a></p>
+   </main>
+   <footer>
+    <p>Copyright @ 2020 Pines of Nowhere</p>
+   </footer>
  </body>
 </html>
