--- a/p2/about/index.html
+++ b/p2/about/index.html
@@ -5,22 +5,37 @@
    <title>About</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/main.css">
-   <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
  </head>
  <body>
-   <ul>
-     <li><a href="index.html">About</a></li>
-     <li><a href="../events/index.html">Events</a></li>
-     <li><a href="../menu/index.html">Menu</a></li>
-     <li><a href="../index.html">Home</a></li>
-   </ul>
-   <h1>Meet the Founders</h1>
-  <img src="../images/founder.png" alt="Bosco and Oliver Ferrufino">
-     <p>Ever since Bosco Ferrufino was a little boy, he enjoyed being in the kitchen, learning traditional Italian recipes and being around family.  He later became a renowned food critic, tasting delicious food from local restaurants in Washington D.C.. Bosco loves eating!</p>
-     <p>In May of 2019, Bosco met Oliver Ferrufino, a French boy who wanted to make Italian food with Bosco. At first they had a hard time getting along but they became great friends and do everything together. Bosco then got the brilliant idea of opening his own restaurant with Oliver.</p>
-   <img src="../images/bread3.jpg" alt="bruschetta">
-   <h1>Passion for Authentic Italian Food</h1>
-      <p>At Pines of Nowhere, we make sure to give our customers the most delicious, traditional Italian meals and goods that you would find in Italy or your Italian grandmother’s kitchen.  We always strive for excellence and offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
-      <p>Copyright @ 2020 Pines of Nowhere</p>
+   <header>
+    <div class="border">
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="red"></div>
+    </div>
+    <h1><a href="../index.html">Pines of Nowhere</a></h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">About</a></li>
+        <li><a href="../events/index.html">Events</a></li>
+        <li><a href="../menu/index.html">Menu</a></li>
+      </ul>
+    </nav>
+   </header>
+   <main>
+    <h2>Meet the Founders</h1>
+    <img src="../images/founder.png" alt="Bosco and Oliver Ferrufino">
+    <p>Oliver and Bosco Ferrufino</p>
+    <p>Ever since Bosco Ferrufino was a little boy, he enjoyed being in the kitchen, learning traditional Italian recipes and being around family.  He later became a renowned food critic, tasting delicious food from local restaurants in Washington D.C.. Bosco loves eating!</p>
+    <p>In May of 2019, Bosco met Oliver Ferrufino, a French boy who wanted to make Italian food with Bosco. At first they had a hard time getting along but they became great friends and do everything together. Bosco then got the brilliant idea of opening his own restaurant with Oliver.</p>
+    <img src="../images/bread3.2.jpg" alt="bruschetta">
+    <h2>Passion for Authentic Italian Food</h1>
+    <p>At Pines of Nowhere, we make sure to give our customers the most delicious, traditional Italian meals and goods that you would find in Italy or your Italian grandmother’s kitchen.  We always strive for excellence and offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
+   </main>
+   <footer>
+    <p>Copyright @ 2020 Pines of Nowhere</p>
+   </footer>
  </body>
 </html>
