--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -7,12 +7,21 @@
    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
  </head>
  <body>
-   <ul>
-     <li><a href="../about/index.html">About</a></li>
-     <li><a href="../events/index.html">Events</a></li>
-     <li><a href="index.html">Menu</a></li>
-     <li><a href="../index.html">Home</a></li>
-   </ul>
+   <header>
+    <div class="border">
+      <div class="green"></div>
+      <div class="white"></div>
+      <div class="red"></div>
+    </div>
+    <h1><a href="../index.html">Pines of Nowhere</a></h1>
+    <nav>
+      <ul>
+        <li><a href="../about/index.html">About</a></li>
+        <li><a href="../index.html">Events</a></li>
+        <li><a href="index.html">Menu</a></li>
+      </ul>
+    </nav>
+   </header>
    <h1>Menu</h1>
    <img src="../images/bread1.jpg" alt="lots of bread">
    <h2>Breads</h2>
