--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -3,8 +3,10 @@
  <head>
    <meta charset="utf-8">
    <title>Menu</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/main.css">
-   <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
  </head>
  <body>
    <header>
@@ -15,93 +17,160 @@
     </div>
     <h1><a href="../index.html">Pines of Nowhere</a></h1>
     <nav>
-      <ul>
-        <li><a href="../about/index.html">About</a></li>
-        <li><a href="../index.html">Events</a></li>
-        <li><a href="index.html">Menu</a></li>
-      </ul>
+      <a href="menu/index.html">Menu</a>
+      <a href="events/index.html">Events</a>
+      <a href="about/index.html">About</a>
     </nav>
    </header>
-   <h1>Menu</h1>
-   <img src="../images/bread1.jpg" alt="lots of bread">
+   <main>
+   <img src="../images/bread1.2.jpg" alt="lots of bread">
    <h2>Breads</h2>
-    <ul>
-      <li>Focaccia - $8</li>
-      <li>Rustic Italian Bread - $7</li>
-      <li>Sourdough Bread - $7</li>
-      <li>French Baguette - $4</li>
-      <li>Croissant - $1.50</li>
-      <li>Bagel - $2</li>
-    </ul>
+      <p>Focaccia - $8</p>
+      <p>Rustic Italian Bread - $7</p>
+      <p>Sourdough Bread - $7</p>
+      <p>French Baguette - $4</p>
+      <p>Croissant - $1.50</p>
+      <p>Bagel - $2</p>
     <img src="../images/sweets3.jpg" alt="window display with green cakes">
     <h2>Pastries</h2>
-     <ul>
-       <li>Sicilian Cannoli - $5</li>
-       <li>Panettone - $6</li>
-       <li>Zeppole - $4</li>
-       <li>Sfogliatella - $4</li>
-       <li>Bombolone - $4</li>
-       <li>Pies (apple, cherry, blueberry, pumpkin, pecan) (Slice - $3 Whole - $15)</li>
-     </ul>
-     <img src="../images/cake.jpg" alt="display of cakes">
+       <p>Sicilian Cannoli - $5</p>
+       <p>Panettone - $6</p>
+       <p>Zeppole - $4</p>
+       <p>Sfogliatella - $4</p>
+       <p>Bombolone - $4</p>
+       <p>Pies Slice - $3 Whole - $15</p>
+       <ul>
+         <li>Apple</li>
+         <li>Cherry</li>
+         <li>Blueberry</li>
+         <li>Pumpkin</li>
+         <li>Pecan</li>
+       </ul>
+     <img src="../images/cakes.jpg" alt="display of cakes">
      <h2>Cakes</h2>
       <p>Slice - $3 Whole - $15</p>
-      <ul>
-        <li>Tiramisu</li>
-        <li>Zuccotto</li>
-        <li>Cassata</li>
-        <li>Torta Paradiso</li>
-      </ul>
+      <p>Tiramisu</p>
+      <p>Zuccotto</p>
+      <p>Cassata</p>
+      <p>Torta Paradiso</p>
      <img src="../images/cookie.jpg" alt="colorful macaroons">
       <h2>Cookies</h2>
-      <p>$0.50 each or $5 for a dozen</p>
-       <ul>
-         <li>Biscotti (almond, pistachio, hazelnut & chocolate, orange-cranberry, double chocolate)</li>
-         <li>Mom’s Homemade Chocolate Chip Cookies</li>
-         <li>Sugar Cookies</li>
-         <li>Macaroons (vanilla, strawberry, chocolate, pistachio, coffee)</li>
-       </ul>
+      <p>$0.50 Each or $5 for a Dozen</p>
+         <p>Biscotti</p>
+         <ul>
+           <li>Almond</li>
+           <li>Pistachio</li>
+           <li>Hazelnut & Chocolate</li>
+           <li>Orange-cranberry</li>
+           <li>Double Chocolate</li>
+         </ul>
+         <p>Mom’s Homemade Chocolate Chip Cookies</p>
+         <p>Sugar Cookies</p>
+         <p>Macaroons</p>
+          <ul>
+           <li>Vanilla</li>
+           <li>Strawberry</li>
+           <li>Chocolate</li>
+           <li>Pistachio</li>
+           <li>Coffee</li>
+          </ul>
        <img src="../images/drink1.jpg" alt="coffee, juice, and baked goods">
        <h2>Drinks</h2>
-       <p>(s: $2, m: $2.50, l: $3) (hot or cold)</p>
-        <ul>
-          <li>Coffee (espresso, cappuccino, ristretto, caffe americano, macchiato, mocha, latte)</li>
-          <li>Juices: orange, apple, grape</li>
-          <li>Water</li>
-          <li>Tea: (black, green, raspberry, chamomile, oolong, mint, jasmine)</li>
-        </ul>
+          <p>S: $2, M: $2.50, L: $3  Hot or Cold</p>
+          <p>Coffee</p>
+            <ul>
+            <li>Espresso</li>
+            <li>Cappuccino</li>
+            <li>Ristretto</li>
+            <li>Caffe Americano</li>
+            <li>Macchiato</li>
+            <li>Mocha</li>
+            <li>Latte</li>
+           </ul>
+          <p>Juices</p>
+            <ul>
+               <li>Orange</li>
+               <li>Apple</li>
+               <li>Grape</li>
+            </ul>
+          <p>Water</p>
+          <p>Tea</p>
+            <ul>
+              <li>Black</li>
+              <li>Green</li>
+              <li>Raspberry</li>
+              <li>Chamomile</li>
+              <li>Oolong</li>
+              <li>Mint</li>
+              <li>Jasmine</li>
+            </ul>
         <img src="../images/pizza2.jpg" alt="pizza with lettuce">
         <h2>Meals</h2>
          <ul>
-           <li>Hearty Breakfast (eggs, bacon, beans, cheese, blood sausage, toast)-$10</li>
-           <li>Brushcetta-$10</li>
-           <li>Lasagna-$10</li>
-           <li>Stuffed shells-$10</li>
-           <li>Pasta (tomato sauce or pesto sauce)-$10</li>
+           <p>Hearty Breakfast Eggs, bacon, beans, cheese, blood sausage, toast - $10</p>
+           <p>Brushcetta-$10</p>
+           <p>Lasagna - $10</p>
+           <p>Stuffed shells - $10</p>
+           <p>Pasta Tomato sauce or Pesto sauce - $10</p>
             <ul>
               <li>Spagetti</li>
               <li>Carbonara</li>
-              <li>Ravioli (4 cheeses, spinach, mushroom, beef)</li>
+              <li>Ravioli</li>
               <li>Tortellini</li>
             </ul>
-           <li>Risotto -$10</li>
-           <li>Salad (Caprese, Chicken Caesar, Greek tomato/cucumber salad)-$10</li>
-           <li>Italian pizza: $6 (Choose cheeses, toppings, sauces from our menu)</li>
-          </ul>
+           <p>Risotto - $10</p>
+           <p>Salad - $10</p>
+            <ul>
+             <li>Caprese</li>
+             <li>Chicken Caesar</li>
+             <li>Greek Tomato & Cucumber Salad</li>
+            </ul>
+           <p>Italian pizza: $6 Choose cheeses, toppings, sauces from our menu</p>
          <img src="../images/cheese3.jpg" alt="lots of cheeses in a wall display">
          <h2>Cheeses, Meats & Other Toppings</h2>
-          <ul>
-            <li>Cheeses: Mozzarella, parmesan, ricotta, provolone, havarti, muenster, brie, camembert, gorgonzola, fontina (slice-$.50, whole-$6)</li>
-            <li>Meats: Honey ham, peppered turkey, rotisserie chicken, angus roast beef, pastrami, Italian sausages (sweet or spicy), Italian meatballs, prosciutto (slice-$0.50, whole-$10)</li>
-            <li>Toppings: onions, alfalfa sprouts, spinach, basil, romaine lettuce, olives, oregano, thyme, rosemary, antipasto, peppers, pickles ($0.50)</li>
-            <li>Sauces, Dressings, & Condiments: Tomato & basil sauce, mayonnaise, mustard, olive oil, pesto, balsamic vinegar.</li>
-          </ul>
-        <img src="../images/sandwich1.jpg" alt="panini with blue cups">
-        <h2>Sandwiches</h2>
-          <ul>
-            <li>Choose a type of bread, meats, cheese, and toppings from our menu.</li>
-            <li>Panini</li>
-          </ul>
+            <h3>Cheeses Slice - $.50, Whole - $6</h3>
+            <p>Mozzarella</p>
+            <p>Parmesan</p>
+            <p>Ricotta</p>
+            <p>Provolone</p>
+            <p>Havarti</p>
+            <p>Muenster</p>
+            <p>Brie</p>
+            <p>Camembert</p>
+            <p>Gorgonzola</p>
+            <p>Fontina</p>
+            <h3>Meats Slice - $0.50, Whole - $10</h3>
+            <p>Honey Ham</p>
+            <p>Peppered Turkey</p>
+            <p>Rotisserie Chicken</p>
+            <p>Angus Roast Beef</p>
+            <p>Pastrami</p>
+            <p>Italian Sausages (sweet or spicy)</p>
+            <p>Italian Meatballs</p>
+            <p>Prosciutto</p>
+            <h3>Toppings $0.50 Each</h3>
+            <p>Onions</p>
+            <p>Alfalfa Sprouts</p>
+            <p>Spinach</p>
+            <p>Basil</p>
+            <p>Romaine Lettuce</p>
+            <p>Olives</p>
+            <p>Oregano</p>
+            <p>Thyme</p>
+            <p>Rosemary</p>
+            <p>Antipasto
+            <p>Peppers</p>
+            <p>Pickles</p>
+            <h3>Sauces, Dressings, & Condiments</h3>
+            <p>Tomato & Basil Sauce</p>
+            <p>Mayonnaise</p>
+            <p>Mustard</p>
+            <p>Olive Oil</p>
+            <p>Pesto</p>
+            <p>Balsamic vinegar</p>
+      </main>
+      <footer>
         <p>Copyright @ 2020 Pines of Nowhere</p>
+      </footer>
  </body>
 </html>
