--- a/p2/about/index.html
+++ b/p2/about/index.html
@@ -17,8 +17,7 @@
     </div>
     <h1><a href="../index.html">Pines of Nowhere</a></h1>
     <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
+        <a href="index.html">About</a></li>
         <li><a href="../events/index.html">Events</a></li>
         <li><a href="../menu/index.html">Menu</a></li>
       </ul>
