--- a/p2/index.html
+++ b/p2/index.html
@@ -14,14 +14,12 @@
       <div class="green"></div>
       <div class="white"></div>
       <div class="red"></div>
-    </div>  
+    </div>
     <h1><a href="index.html">Pines of Nowhere</a></h1>
     <nav>
-      <ul>
-        <li><a href="about/index.html">About</a></li>
-        <li><a href="events/index.html">Events</a></li>
-        <li><a href="menu/index.html">Menu</a></li>
-      </ul>
+        <a href="menu/index.html">Menu</a>
+        <a href="events/index.html">Events</a>
+        <a href="about/index.html">About</a>
     </nav>
    </header>
    <main>
