--- a/e11/index.html
+++ b/e11/index.html
@@ -9,15 +9,15 @@
   <body>
     <div class="container">
       <div class="ear">
-        <div class="inner">
+        <div class="inner"></div>
       </div>
       <div class="ear_right">
         <div class="inner_right">
       </div>
       <div class="head">
-        <div class="face">
-          <div class="eye">
-          <div class="eye_right">
+          <div class="eye"></div>
+          <div class="eye_right"></div>
+      </div>
           <div class="mouth_container">
             <div class="nose"></div>
             <div class="mouth">
@@ -26,7 +26,8 @@
               <div class="line3"></div>
           </div>
       </div>
-      <div class="body">
+    </div>
+      <div class="body_parts">
           <div class="hand_left">
           <div class="thumb">
           <div class="hand">>
